# connect

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMPLIANCE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  PLAN.md  README.md  RELEASE.md  SECURITY.md  TESTING.md  TRADEMARK.md  dev_tasks.py  mkdocs.yml  pyproject.toml  todo.txt
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release-dev-to-main.md
.github/workflows/: changelog-check.yml  connect-ci.yml  docs-pages.yml  publish-main.yml  release.yml  semver-label-gate.yml  version-bump-dev.yml
dev/: get_token.py  test_equities.py  test_indices.py  test_live_auth.py  test_live_auth_angelone.py  test_live_equity_fno.py  test_live_instruments.py  test_options.py
docs/: ADDING_A_BROKER.md  ARCHITECTURE.md  CONTRIBUTOR_GUIDE.md  CORE_BROKER_INTEGRATION.md  DESIRED_STATE.md  ELEGANCE_REFACTOR_PLAN.md  EXAMPLES.md  GETTING_STARTED.md  PLUGIN_ARCHITECTURE_PLAN.md  PROBLEMS.md  QUICKSTART.md  README.md  RELEASE_VERSIONING.md  STRUCTURED_LOGGING_PLAN.md  USAGE_EXAMPLES.md
docs_site/: basics.md  broker-differences.md  config-and-env.md  errors-and-retries.md  glossary.md  gtt.md  holdings-and-funds.md  index.md  instruments.md  login-and-session.md  market-data.md  orders.md  positions.md  realtime-websocket.md  safety-and-good-practices.md  start-here.md  trades.md
docs_site/recipes/: cancel-all-open-orders.md  close-all-open-positions.md  first-order.md  index.md  recover-from-reconnect.md  stream-and-store-live-ticks.md
docs_site/reference/: capabilities.md  clients.md  enums.md  exceptions.md  index.md  instrument-store.md  models.md  operation-notes.md
docs_site/troubleshooting/: auth-failures.md  duplicate-orders.md  index.md  instrument-not-found.md  order-rejected.md  websocket-reconnect.md
examples/: angelone.py  angelone_store.py  zerodha.py
scripts/: check_changelog_entry.sh  check_release_version.sh
tests/: test_capabilities.py  test_zerodha_auth.py
tests/integration/: conftest.py  test_client_init.py  test_instrument_manager.py  test_instrument_queries.py  (+2 more)
tests/live/: conftest.py  (+2 more)
tt_connect/: __init__.py  capabilities.py  client.py  config.py  enums.py  exceptions.py  instruments.py  instruments_mixin.py  lifecycle.py  logging_utils.py  models.py  orders.py  portfolio.py  sync_client.py
(+94 files in other folders)
