[tool.poetry]
name = "tt-connect"
version = "0.1.0"
description = "A unified API layer for all Indian brokers"
authors = ["Apurv Salunke <salunke.apurv7@gmail.com>"]
readme = "README.md"
packages = [{include = "tt_connect"}]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = ">=2.0"
httpx = ">=0.27"
aiosqlite = ">=0.20"
websockets = ">=12.0"
pyotp = ">=2.9"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
ruff = ">=0.4"
mypy = ">=1.10"
respx = ">=0.21.1"
freezegun = ">=1.4.0"
pytest-cov = ">=5.0.0"
pytest-mock = ">=3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests/unit", "tests/integration"]
norecursedirs = ["dev", ".git", ".venv", "__pycache__"]
